syntax = "proto3";

package sekai.db;

import "sekai/db/proto/descriptor.proto";

message MySekaiFixtureTag {
  option (master_db_file) = "mysekaiFixtureTags.json";
  enum MysekaiFixtureTagType {
    UNKNOWN_MYSEKAI_FIXTURE_TAG_TYPE = 0;
    GAME_CHARACTER                   = 1 [(json_value) = "game_character"];
    NONE                             = 2 [(json_value) = "none"];
    SERIES                           = 3 [(json_value) = "series"];
    UNIT                             = 4 [(json_value) = "unit"];
  }

  optional int32 id                       = 1 [(json_name) = "id", (primary_key) = true];
  optional string name                    = 2 [(json_name) = "name"];
  optional string pronunciation           = 3 [(json_name) = "pronunciation"];
  optional MysekaiFixtureTagType tag_type = 4 [(json_name) = "mysekaiFixtureTagType"];
  optional int32 external_id              = 5 [(json_name) = "externalId"];
}
